@@ -22,6 +22,7 @@ Version 1.7.13+svn:
  * User interface:
    * Rewrote the sizing code of the tree view widget
    * Don't show turn dialog once the level has ended
+   * Fix the empty games in the MP lobby game list
  * Miscellaneous and bug fixes:
    * Fix bug #15429 (Units created by WML can only get the Neutral alignment)
 
